# xatlas

./: .gitignore  README.md
docs/: 01-overview.md  02-uv-unwrap.md  03-packing.md  04-baker.md  05-viewer-gui.md  06-api-reference.md  07-gpu-cuda-acceleration.md  08-glb-compression-pipeline.md  README.md
tools/glb-pipeline/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  requirements.in  requirements.txt  vcpkg.json
tools/glb-pipeline/scripts/: gen_test_glb.py  setup-python.sh  setup-ubuntu.sh  setup-windows.ps1
tools/glb-pipeline/src/: main.cpp  tiny_impl.cpp
